# cgudrian.github.io

./: .buildinfo  .gitignore  .gitmodules  404.html  CNAME  Gemfile  _config.yml  about.markdown  genindex.html  hugo.toml  impressum.markdown  index.html  index.markdown  index.md  pyproject.toml  search.html
.doctrees/: environment.pickle  index.doctree
.github/workflows/: hugo.yaml
_drafts/: finding-trait-implementations-in-rust.md  introduction.md  the_beginning.md  traits-sind-nicht-wie-interfaces.md  welcome-to-jekyll.markdown
_includes/: social.html
_layouts/: post.html
_posts/: 2019-12-17-welcome-to-jekyll.markdown  2022-11-20-welcome-to-jekyll.markdown
archetypes/: posts.md
content/: legal.md
content/posts/: foo.md  my-first-post.md  test.md  test2.md
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle
layouts/partials/: comments.html  post.html
public/: 404.html  index.html  index.xml
public/ananke/css/: main.css.map
public/categories/: index.html  index.xml
public/tags/: index.html  index.xml
source/: conf.py  index.rst
