[tool.poetry]
name = "cgudrian.github.io"
version = "0.1.0"
description = ""
authors = ["Christian Gudrian <cgu@ivu.de>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
