[tool.poetry]
name = "cgudrian.github.io"
version = "0.1.0"
description = ""
authors = ["Christian Gudrian <cgu@ivu.de>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^5.1.1"
furo = "^2022.6.21"
sphinx-autobuild = "^2021.3.14"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
